--- a/server/templates/includes/agents_create.html
+++ b/server/templates/includes/agents_create.html
@@ -1,11 +1,11 @@
 {{define "content"}}
 <form id="createAgent" class="create agent" method="PUT" enctype="multipart/form-data" action="/agents/create">
 
-  <fieldset class="form-group">
+  <fieldset class="row mb-3">
   <legend>General settings</legend>
-    <div class="form-row">
+    <div class="row ms-0">
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="name" class="col-md col-form-label">Name</label>
         <div class="col-md">
           <input type="text" class="form-control" name="name" id="name" aria-describedby="nameHelp" placeholder="Enter name">
@@ -13,7 +13,7 @@
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="desc" class="col-md col-form-label">Description</label>
         <div class="col-md">
           <input type="text" class="form-control" name="desc" id="desc" aria-describedby="descHelp" placeholder="Enter short description">
@@ -21,9 +21,9 @@
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="status" class="col-md col-form-label">Status</label>
-        <div class="col-md">
+        <div class="col-md form-check form-switch">
           <input type="checkbox" class="form-check-input" name="status" id="status" value="1" aria-describedby="statusHelp">
           <small id="statusHelp" class="form-text text-muted">Activate</small>
         </div>
@@ -32,11 +32,11 @@
     </div>
   </fieldset>
 
-  <fieldset class="form-group">
+  <fieldset class="row mb-3">
   <legend>Agent settings</legend>
-    <div class="form-row">
+    <div class="row ms-0">
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="host" class="col-md col-form-label">Host</label>
         <div class="col-md">
           <input type="text" class="form-control" name="host" id="host" aria-describedby="hostHelp" placeholder="Enter hostname or IP address">
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="port" class="col-md col-form-label">Port</label>
         <div class="col-md">
           <input type="text" class="form-control" name="port" id="port" aria-describedby="portHelp" placeholder="Enter port number">
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="key" class="col-md col-form-label">Key</label>
         <div class="col-md">
           <input type="text" class="form-control" name="key" id="key" aria-describedby="keyHelp" placeholder="Enter API key">
