--- a/server/templates/includes/job_view.html
+++ b/server/templates/includes/job_view.html
@@ -1,18 +1,18 @@
 {{ define "content" }}
 <div id="content" class="stats">
-  <div id="accordion">
+  <div id="accordion" class="accordion">
   {{ range .stats }}
-    <div class="card fuzzer">
+    <div class="card fuzzer accordion-item">
 
       <div class="card-header" id="heading-{{ .FuzzerProcessID }}">
-        <a data-toggle="collapse" href="#collapse-{{ .FuzzerProcessID }}" aria-controls="collapse-{{ .FuzzerProcessID }}" class="d-block">
-          <i class="fas fa-chevron-down float-right"></i>
+        <h5 data-bs-toggle="collapse" data-bs-target="#collapse-{{ .FuzzerProcessID }}" aria-controls="collapse-{{ .FuzzerProcessID }}">
+          <i class="fas fa-chevron-down float-end"></i>
           {{ .AFLBanner }} @ {{ .FuzzerProcessID }}
-        </a>
+        </h5>
       </div>
 
       <div class="card-body">
-        <div id="collapse-{{ .FuzzerProcessID }}" class="stat collapse show card-deck">
+        <div id="collapse-{{ .FuzzerProcessID }}" class="stat accordion-collapse collapse show row row-cols-4">
 
           <div class="card stat">
             <h5 class="card-header">Process timing</h5>
@@ -40,13 +40,13 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Total number of function calls attempted.">Total execs:</span>
-                  <span class="badge badge-primary badge-pill">{{ formatNumber .ExecsDone }}</span></li>
+                  <span class="badge text-bg-primary rounded-pill">{{ formatNumber .ExecsDone }}</span></li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Number of function calls attempted since last recorded crash.">Execs since crash:</span>
-                  <span class="badge badge-primary badge-pill">{{ formatNumber .ExecsSinceCrash }}</span></li>
+                  <span class="badge text-bg-primary rounded-pill">{{ formatNumber .ExecsSinceCrash }}</span></li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Current number of execs per second.">Exec speed:</span>
-                  <span class="badge badge-primary badge-{{if lt .ExecsPerSec 20.0}}danger{{else if lt .ExecsPerSec 100.0}}warning{{else}}success{{end}}">{{ .ExecsPerSec }}/sec</span></li>
+                  <span class="badge text-bg-{{if lt .ExecsPerSec 20.0}}danger{{else if lt .ExecsPerSec 100.0}}warning{{else}}success{{end}} rounded-pill">{{ .ExecsPerSec }}/sec</span></li>
               </ul>
             </div>
           </div>
@@ -57,19 +57,19 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Count of queue passes done.">Cycles done:</span>
-                  <span class="badge badge-primary badge-pill">{{ .CyclesDone }}</span></li>
+                  <span class="badge text-bg-primary rounded-pill">{{ .CyclesDone }}</span></li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Number of test cases discovered.">Total paths:</span>
-                  <span class="badge badge-primary badge-pill">{{ .PathsTotal }}</span></li>
+                  <span class="badge text-bg-primary rounded-pill">{{ .PathsTotal }}</span></li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Number of unique crashes recorded.">Unique crashes:</span>
-                  <span class="badge badge-primary badge-{{if ne .UniqueCrashes 0}}danger{{else}}secondary{{end}}">{{ .UniqueCrashes }}</span></li>
+                  <span class="badge text-bg-{{if ne .UniqueCrashes 0}}danger{{else}}secondary{{end}} rounded-pill">{{ .UniqueCrashes }}</span></li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Number of unique hangs encountered.">Unique hangs:</span>
-                  <span class="badge badge-primary badge-{{if ne .UniqueHangs 0}}warning{{else}}secondary{{end}}">{{ .UniqueHangs }}</span></li>
+                  <span class="badge text-bg-{{if ne .UniqueHangs 0}}warning{{else}}secondary{{end}} rounded-pill">{{ .UniqueHangs }}</span></li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Bitmap coverage observed by the instrumentation.">Bitmap coverage:</span>
-                  <span class="badge badge-primary badge-success">{{ .BitmapCvg }}</span></li>
+                  <span class="badge text-bg-success">{{ .BitmapCvg }}</span></li>
               </ul>
             </div>
           </div>
@@ -80,27 +80,27 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Path depth reached through the guided fuzzing process.">Levels:</span>
-                  <span class="badge badge-primary badge-pill">{{ .MaxDepth }}</span>
+                  <span class="badge text-bg-primary rounded-pill">{{ .MaxDepth }}</span>
                 </li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Inputs that have not gone through any fuzzing yet.">Pending:</span>
-                  <span class="badge badge-primary badge-pill">{{ .PendingTotal }}</span>
+                  <span class="badge text-bg-primary rounded-pill">{{ .PendingTotal }}</span>
                 </li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Inputs that the fuzzer really wants to get to in this queue cycle.">Pend fav:</span>
-                  <span class="badge badge-primary badge-pill">{{ .PendingFavs }}</span>
+                  <span class="badge text-bg-primary rounded-pill">{{ .PendingFavs }}</span>
                 </li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="New paths found during this fuzzing section.">Own finds:</span>
-                  <span class="badge badge-primary badge-pill">{{ .PathsFound }}</span>
+                  <span class="badge text-bg-primary rounded-pill">{{ .PathsFound }}</span>
                 </li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Paths imported from other fuzzer instances when doing parallelized fuzzing.">Imported:</span>
-                  <span class="badge badge-primary badge-pill">{{ .PathsImported }}</span>
+                  <span class="badge text-bg-primary rounded-pill">{{ .PathsImported }}</span>
                 </li>
                 <li class="list-group-item">
                   <span data-toggle="tooltip" title="Consistency of observed traces.">Stability:</span>
-                  <span class="badge badge-primary badge-success">{{ .Stability }}</span>
+                  <span class="badge text-bg-primary badge-success">{{ .Stability }}</span>
                 </li>
               </ul>
             </div>
@@ -109,16 +109,18 @@
         </div>
       </div>
       <div class="card-footer">
-        <a href="/job/{{.GetJob.GUID}}/check?fid={{.GetFID}}" class="action check" data-method="POST">
-          <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="grey">
+        <div class="btn-group">
+        <a href="/job/{{.GetJob.GUID}}/check?fid={{.GetFID}}" class="btn btn-outline-secondary action check" data-method="POST">
+          <svg class="bi" width="20px" height="20px" fill="currentColor" color="grey">
             <use xlink:href="/static/svg/bootstrap-icons.svg#check-circle-fill"/>
           </svg>
         </a>
-        <a href="/job/{{.GetJob.GUID}}/plot?fid={{.GetFID}}" class="action plot" data-method="POST">
-          <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="green">
+        <a href="/job/{{.GetJob.GUID}}/plot?fid={{.GetFID}}" class="btn btn-outline-secondary action plot" data-method="POST">
+          <svg class="bi" width="20px" height="20px" fill="currentColor" color="green">
             <use xlink:href="/static/svg/bootstrap-icons.svg#bar-chart-fill"/>
           </svg>
         </a>
+        </div>
       </div>
     </div>
 
