--- a/server/templates/includes/user_edit.html
+++ b/server/templates/includes/user_edit.html
@@ -1,18 +1,18 @@
 {{define "content"}}
 <form id="editUser" method="POST" enctype="multipart/form-data" action="/user/edit">
 
-  <fieldset class="form-group">
+  <fieldset class="row mb-3">
   <legend>General information</legend>
-    <div class="form-row">
+    <div class="row ms-0">
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="firstname" class="col-md col-form-label">First name</label>
         <div class="col-md">
           <input type="text" class="form-control" name="firstname" id="firstname" value="{{.user.FirstName}}">
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="lastname" class="col-md col-form-label">Last name</label>
         <div class="col-md">
           <input type="text" class="form-control" name="lastname" id="lastname" value="{{.user.LastName}}">
@@ -21,16 +21,16 @@
 
     </div>
 
-    <div class="form-row">
+    <div class="row ms-0">
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="username" class="col-md col-form-label">Username</label>
         <div class="col-md">
           <input type="text" class="form-control" name="username" id="username" placeholder="{{.user.UserName}}" disabled>
         </div>
       </div>
 
-      <div class="form-group col-md">
+      <div class="col-md">
         <label for="email" class="col-md col-form-label">Email address</label>
         <div class="col-md">
           <input type="text" class="form-control" name="email" id="email" placeholder="{{.user.Email}}">
@@ -42,11 +42,11 @@
   </div>
   </fieldset>
 
-  <fieldset class="form-group">
+  <fieldset class="row mb-3">
   <legend>Password</legend>
 
-    <div class="form-row">
-      <div class="form-group col-md">
+    <div class="row ms-0">
+      <div class="col-md">
         <label for="password" class="col-md col-form-label">Current password</label>
         <div class="col-md">
           <input type="password" class="form-control" name="password" id="password">
@@ -54,8 +54,8 @@
       </div>
     </div>
 
-    <div class="form-row">
-      <div class="form-group col-md">
+    <div class="row ms-0">
+      <div class="col-md">
         <label for="newPassword" class="col-md col-form-label">New password</label>
         <div class="col-md">
           <input type="password" class="form-control" name="newPassword" id="newPassword">
@@ -63,8 +63,8 @@
       </div>
     </div>
 
-    <div class="form-row">
-      <div class="form-group col-md">
+    <div class="row ms-0">
+      <div class="col-md">
         <label for="newPasswordConfirmation" class="col-md col-form-label">New password confirmation</label>
         <div class="col-md">
           <input type="password" class="form-control" name="newPasswordConfirmation" id="newPasswordConfirmation">
