--- a/server/templates/includes/crashes_view.html
+++ b/server/templates/includes/crashes_view.html
@@ -34,32 +34,32 @@
 {{end}}
 
 {{define "verifyCrash"}}
-<a href="/crash/{{.}}/verify" class="float-right action verify" data-method="POST">
-  <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="orangered">
+<a href="/crash/{{.}}/verify" class="btn btn-outline-secondary action verify" data-method="POST">
+  <svg class="bi" width="20" height="20" fill="currentColor" color="orangered" viewBox="0 0 20 20">
     <use xlink:href="/static/svg/bootstrap-icons.svg#check-square-fill"/>
   </svg>
 </a>
 {{end}}
 
 {{define "deleteCrash"}}
-<a href="/crash/{{.}}" class="float-right action delete" data-method="DELETE">
-  <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="red">
+<a href="/crash/{{.}}" class="btn btn-outline-secondary action delete" data-method="DELETE">
+  <svg class="bi" width="20" height="20" fill="currentColor" color="red" viewBox="0 0 20 20">
     <use xlink:href="/static/svg/bootstrap-icons.svg#x-square-fill"/>
   </svg>
 </a>
 {{end}}
 
 {{define "downloadCrash"}}
-<a href="/crash/{{.}}/download" class="float-right action download" data-type="binary" data-method="POST">
-  <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="#0074D9">
+<a href="/crash/{{.}}/download" class="btn btn-outline-secondary action download" data-type="binary" data-method="POST">
+  <svg class="bi" width="20" height="20" fill="currentColor" color="#0074D9" viewBox="0 0 20 20">
     <use xlink:href="/static/svg/bootstrap-icons.svg#arrow-down-square-fill"/>
   </svg>
 </a>
 {{end}}
 
 {{define "editCrash"}}
-<a href="/crash/{{.}}/edit" class="action edit">
-  <svg class="bi" width="1.5em" height="1.5em" fill="currentColor" color="brown">
+<a href="/crash/{{.}}/edit" class="btn btn-outline-secondary action edit">
+  <svg class="bi" width="20" height="20" fill="currentColor" color="brown" viewBox="0 0 20 20">
     <use xlink:href="/static/svg/bootstrap-icons.svg#pencil"/>
   </svg>
 </a>
@@ -81,15 +81,16 @@
   </ul>
 
   {{template "pagination" .currentPage}}
-  <div class="card-columns">
+  <div id="cards" class="row row-cols-3">
+
   {{range .crashes}}
-    <div class="card crash">
+  <div class="col col-sm-6 col-lg-4 mb-3">
+    <div class="card crash {{if not .Verified }}unverified{{end}}">
       <div class="card-header">
-        <small class="id {{ .GetRisk }}">{{ .ID }}</small>
-        <h6>
+        <small class="id {{ .GetRisk }} rounded-top-3 rounded-end-0">{{ .ID }}</small>
         {{if .Verified }}
-          <a data-toggle="collapse" href="#collapse-{{ .ID }}" aria-controls="collapse-{{ .ID }}" class="d-block collapsed">
-            <i class="fas fa-chevron-down float-right"></i>
+          <h6 data-bs-toggle="collapse" href="#collapse-{{ .ID }}" aria-controls="collapse-{{ .ID }}" class="d-block collapsed">
+            <i class="fas fa-chevron-down float-end"></i>
             {{if .Label }}
               <span class="label">{{ .Label }}</span>
             {{else if .Function }}
@@ -97,37 +98,43 @@
             {{else}}
               <span class="bugid">{{ .BugID }}</span>
             {{end}}
-            <small class="text-muted">{{ .GetJob.Name }}</small>
-          </a>
+            <small class="text-body-secondary">{{ .GetJob.Name }}</small>
+          </h6>
         {{else}}
-          <span class="label">Unverified</span>
-          <small class="text-muted">{{ .GetJob.Name }}</small>
-          {{template "deleteCrash" .GUID}}
-          {{template "downloadCrash" .GUID}}
-          {{template "verifyCrash" .GUID}}
+          <h6 class="d-block">
+            <span class="label">Unverified</span>
+            <small class="text-body-secondary">{{ .GetJob.Name }}</small>
+          </h6>
+          <div class="btn-group float-end">
+            {{template "deleteCrash" .GUID}}
+            {{template "downloadCrash" .GUID}}
+            {{template "verifyCrash" .GUID}}
+          </div>
         {{end}}
-        </h6>
       </div>
       {{if .Verified }}
       <div id="collapse-{{ .ID }}" class="collapse collapsed">
         <div class="card-body">
-          <small class="card-text">{{ .Description }}</small>
+          <p class="card-text truncate">{{ .Description }}</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><h6>Fuzzer ID <small>{{ .FuzzerID }}</small></h6></li>
-            <li class="list-group-item"><h6>Bug ID <small>{{ .BugID }}</small></h6></li>
-            <li class="list-group-item"><h6>Module <small>{{ .Module }}</small></h6></li>
-            <li class="list-group-item"><h6>Function <small>{{ .Function }}</small></h6></li>
-            <li class="list-group-item"><h6>Impact <small>{{ .Impact }}</small></h6></li>
+            <li class="list-group-item"><h6>Fuzzer ID</h6> <small class="text-body-secondary float-end">{{ .FuzzerID }}</small></li>
+            <li class="list-group-item"><h6>Bug ID</h6> <small class="text-body-secondary float-end">{{ .BugID }}</small></li>
+            <li class="list-group-item"><h6>Module</h6> <small class="text-body-secondary float-end">{{ .Module }}</small></li>
+            <li class="list-group-item"><h6>Function</h6> <small class="text-body-secondary float-end">{{ .Function }}</small></li>
+            <li class="list-group-item"><h6>Impact</h6> <small class="text-body-secondary float-end">{{ .Impact }}</small></li>
           </ul>
         </div>
         <div class="card-footer">
-          {{template "deleteCrash" .GUID}}
-          {{template "editCrash" .GUID}}
-          {{template "downloadCrash" .GUID}}
+          <div class="btn-group">
+            {{template "deleteCrash" .GUID}}
+            {{template "editCrash" .GUID}}
+            {{template "downloadCrash" .GUID}}
+          </div>
         </div>
       </div>
       {{end}}
     </div>
+  </div>
     {{end}}
   </div>
   {{template "pagination" .currentPage}}
