Migrate card columns to Masonry

--- a/server/templates/layouts/base.html
+++ b/server/templates/layouts/base.html
@@ -82,6 +82,7 @@
     </footer>
     <script src="/static/js/jquery.min.js" type="text/javascript" charset="utf8"></script>
     <script src="/static/js/jquery-succinct-min.js" type="text/javascript" charset="utf8"></script>
+    <script src="/static/js/masonry.pkgd.min.js" type="text/javascript" charset="utf8"></script>
     <script src="/static/js/custom.js" type="text/javascript" charset="utf8"></script>
 </body>
 </html>
